# pathtracer

./: CMakeLists.txt  README.md
pathtracer/: CMakeLists.txt  core.h  functions.h  main.cpp  objects.h  setup.h
src/: core.cpp  core.h  dependencies.h  main.cpp  objects.cpp  objects.h  setup.h
